--- a/leaderboard.html
+++ b/leaderboard.html
@@ -515,7 +515,7 @@
   </style>
 </head>
 <body>
-  <a class="homeButton" role="button" href="/">Back</a>
+  <a class="homeButton" role="button" href="https://gnzzy7.github.io/mrbeast-confirmed-stats/">Back</a>
   <p class="title">
     THE GUESSING LEADERBOARD
   </p>
