--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     <span style="font-family: 'ObelixPro', sans-serif; font-size: 31px; background: -webkit-linear-gradient(#00F0FF, #00C4FF); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-align: center;">MrBeast Confirmed Sub Counts Statistics</span>
     <img src="https://images.emojiterra.com/twitter/v13.1/512px/1f4ca.png" width="40" height="40" />
   </div>
-  <a class="buttonTGL" role="button" href="/leaderboard.html">NEW: The Guessing Leaderboard</a>
+  <a class="buttonTGL" role="button" href="https://gnzzy7.github.io/mrbeast-confirmed-stats/leaderboard">NEW: The Guessing Leaderboard</a>
   <div class="proofHereLol">
     <div class="vsscchannelImage" style="animation-delay: 15s;">
       <img src="./viewstats.png" class="avatar" />
