--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
       "history.txt",
     ).then((res) => res.text());
 
-    await fetch("https://nia-statistics.com/mrbeastsubcount")
+    await fetch("https://mrbeastsubcount.nia-statistics.com/")
     .then((res) => res.json())
     .then(async (msgData) => {
       await fetch("https://api.communitrics.com/UCX6OQ3DkcsbYNE6H8uQQuVA")
